runtime/tests/cases/syntax/errors/set_missing_equals.bobbin
temp foo = 1
set foo "new value"
